--- a/dillo/templates/flatpages/default.pug
+++ b/dillo/templates/flatpages/default.pug
@@ -1,9 +1,9 @@
-| {% extends "dillo/base.pug" %}
+| {% extends "dillo/base_columns.pug" %}
 | {% load i18n %}
 
 | {% block page_title %}{{ flatpage.title }}{% endblock page_title %}
 
-| {% block content %}
+| {% block stream %}
 .container
   .row
     .col-md-8
@@ -15,4 +15,6 @@
       | {% include 'dillo/components/_button_edit.pug' with url=edit_url label="Edit Page" %}
     | {% endif %}
 
-| {% endblock content %}
+  | {% include 'dillo/components/_footer.pug' %}
+
+| {% endblock stream %}
