--- a/dillo/templates/flatpages/default.pug
+++ b/dillo/templates/flatpages/default.pug
@@ -5,16 +5,15 @@
 
 | {% block stream %}
 .container
-  .row
-    .col-md-8
-      | {{ flatpage.content }}
-
-    | {% if request.user.is_superuser %}
-    div
-      | {% url 'admin:flatpages_flatpage_change' flatpage.id as edit_url %}
-      | {% include 'dillo/components/_button_edit.pug' with url=edit_url label="Edit Page" %}
-    | {% endif %}
+  | {{ flatpage.content }}
 
   | {% include 'dillo/components/_footer.pug' %}
-
 | {% endblock stream %}
+
+| {% block sidebar %}
+| {% if request.user.is_superuser %}
+.sidebar-block
+  | {% url 'admin:flatpages_flatpage_change' flatpage.id as edit_url %}
+  | {% include 'dillo/components/_button_edit.pug' with url=edit_url label="Edit Page" %}
+| {% endif %}
+| {% endblock sidebar %}
