Cleanup: rename btn-block to btn-wide

--- a/dillo/templates/account/signup.pug
+++ b/dillo/templates/account/signup.pug
@@ -35,7 +35,7 @@
 				small By pressing the Sign Up button, I accept the #[a(href="{% url 'terms' %}") terms and conditions].
 
 			.card-cta
-				button.btn.btn-primary.btn-block(type='submit')
+				button.btn.btn-primary.btn-wide(type='submit')
 					span {% trans "Sign Up" %}
 
 	.card-footer
