--- a/dillo/templates/dillo/components/_button_edit.pug
+++ b/dillo/templates/dillo/components/_button_edit.pug
@@ -1,4 +1,4 @@
-a.btn.btn-block(href="{{ url }}", class="{{ class }}", title="{{ label }}")
+a.btn.btn-wide(href="{{ url }}", class="{{ class }}", title="{{ label }}")
   span
     i.i-edit
     strong {{ label }}
