--- a/dillo/templates/dillo/components/_button_modal_open.pug
+++ b/dillo/templates/dillo/components/_button_modal_open.pug
@@ -1,4 +1,4 @@
-a.btn.btn-block(
+a.btn.btn-wide(
   class="js-show-modal {{ class }}",
   data-modal_category='form',
   data-modal_title='{{ label }}',
