--- a/dillo/templates/dillo/jobs/job_detail.pug
+++ b/dillo/templates/dillo/jobs/job_detail.pug
@@ -92,7 +92,7 @@
 .sidebar-block
 	| {% url 'admin:dillo_job_change' job.id as edit_url %}
 	| {% trans 'Whoosh Job' as edit_label %}
-	| {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label %}
+	| {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label class="btn-admin" %}
 | {% endif %}
 
 .sidebar-block
