UI: change color of focused textarea

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -262,7 +262,7 @@
     resize: vertical
 
     &:focus
-      border-color: var(--community-theme-color, --accent)
+      border-color: var(--text-secondary)
 
     // If there is text in the field, highlight the Comment button.
     &:not(:placeholder-shown)
