UI: Minor tweaks to line height

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -165,6 +165,9 @@
   font-size: var(--comment-content-font-size)
   line-height: 21px
 
+  p
+    line-height: var(--comment-line-height)
+
   ul, ol
     margin-bottom: var(--spacer)
 
