--- a/dillo/templates/dillo/components/_button_follow.pug
+++ b/dillo/templates/dillo/components/_button_follow.pug
@@ -7,7 +7,7 @@ a.btn.btn-sidebar(
   href="{% follow_url target_object %}",
   )
   span
-    i(class="{% if tag %}i-hash{% else %}{% if request.user|is_following:target_object %}i-user-x{% else %}i-user-plus{% endif %}{% endif %}")
+    i(class="{% if tag %}i-hash{% else %}{% if request.user|is_following:target_object %}i-user-minus{% else %}i-user-plus{% endif %}{% endif %}")
     span {% if request.user|is_following:target_object %}Unfollow{% else %}Follow{% endif %}{% if tag %} Hashtag{% endif %}
 | {% endif %}
 | {% else %}
