Match styling of comment preview with comment content.

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -281,6 +281,10 @@
     display: none // only show when inside
 
 
+.comment-preview
+  +margin(3, top)
+
+
 // Shows the "Login to comment" button.
 .comment-form-login
   +margin(2, y)
