--- a/dillo/templates/errors/403_csrf.pug
+++ b/dillo/templates/errors/403_csrf.pug
@@ -7,7 +7,7 @@ p.
 	#[a(href='javascript:history.back(); window.location.reload();') #[strong go back, strong refresh the page, and try again]].
 
 p.
-	All forms on Blender ID are protected against Cross-Site Request Forgeries.
+	All forms on this site are protected against Cross-Site Request Forgeries.
 	This type of attack occurs when a malicious website contains a link, a form button or some
 	JavaScript that is intended to perform some action on your website, using the credentials of a
 	logged-in user who visits the malicious site in their browser. A related type of attack, ‘login
