--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -1,5 +1,5 @@
 .notifications-container
-  --notifications-min-height: 450px
+  --notifications-min-height: 420px
 
   background-color: var(--notifications-background)
   max-height: calc(100vh - var(--header-height) - var(--footer-height))
@@ -65,6 +65,13 @@
   .notifications-preview
     max-height: 48px
     max-width: 48px
+
+  .activity-list-item
+    font-size: var(--font-size-base)
+
+  .activity-list-item-icon i
+    position: relative
+    top: 3px
 
 
 .notification-item
