--- a/dillo/templates/dillo/post_detail_embed_link.pug
+++ b/dillo/templates/dillo/post_detail_embed_link.pug
@@ -2,7 +2,9 @@
 | {% load i18n %}
 | {% load micawber_tags %}
 | {% block media %}
-| {{ post.content | oembed }}
+section.post-view-media.col-scrollable
+  .post-view-media-embed
+    | {{ post.content | oembed }}
 | {% endblock media %}
 
 | {% block site_footer %}{% endblock site_footer %}
