--- a/dillo/templates/dillo/components/_button_share.pug
+++ b/dillo/templates/dillo/components/_button_share.pug
@@ -6,7 +6,7 @@ button.post-actions-btn(
 	title="{% trans 'Share' %}",
 	data-toggle="tooltip", data-placement="bottom",
 	data-share-title="{% trans 'Share Post' %}",
-	data-share-text="{% firstof post.user.profile.name post.user.username %} {% trans 'on' %} anima.to",
+	data-share-text="{{ post.user.username }} {% trans 'on' %} anima.to",
 	data-share-url="{% url 'post_detail' post.hash_id %}",
 	data-target='#modal-share-{{ post.hash_id }}')
 	span
