--- a/dillo/templates/dillo/post_detail_embed_base.pug
+++ b/dillo/templates/dillo/post_detail_embed_base.pug
@@ -75,7 +75,7 @@ script.
 
 | {% block javascript_comments %}
 script.
-  $(function() {
+  function initComments() {
 
     // Load comments.
     let $commentsContainer = $("#js-comments");
@@ -90,12 +90,11 @@ script.
 
     // Send comment on Ctrl+Enter.
     $commentTextField.on("keyup", function (e) {
-      if ((e.keyCode == 13 || e.key === 'Enter') && e.ctrlKey) {
+      if ((e.keyCode === 13 || e.key === 'Enter') && e.ctrlKey) {
         $(this).submit();
       }
     });
-
-  });
+  };
 | {% endblock javascript_comments %}
 
 script.
