Hide post navigation when viewing post details

--- a/dillo/templates/dillo/post_detail.pug
+++ b/dillo/templates/dillo/post_detail.pug
@@ -12,6 +12,8 @@ script.
 		$('main').html(data);
 		initEmbedListMedia();
 		initComments();
+		$('.js-post-nav-prev').remove();
+		$('.js-post-nav-next').remove();
 	});
 | {% endblock javascript_extra %}
 
