UI: Fix styling in buttons

--- a/dillo/templates/account/login.pug
+++ b/dillo/templates/account/login.pug
@@ -33,7 +33,7 @@
 
 
 			.card-cta
-				button.btn-theme-primary(type='submit')
+				button.btn-primary(type='submit')
 					span {% trans "Sign In" %}
 
 	.card-footer
