--- a/dillo/templates/dillo/reels/reel_list.pug
+++ b/dillo/templates/dillo/reels/reel_list.pug
@@ -29,7 +29,7 @@
       .col-md-3
         | {% url 'profile_edit' as btn_profile_url %}
         | {% trans 'Add Reel to Profile' as btn_profile_label %}
-        | {% include 'dillo/components/_button_generic.pug' with url=btn_profile_url label=btn_profile_label class="btn-primary" %}
+        | {% include 'dillo/components/_button_generic.pug' with url=btn_profile_url label=btn_profile_label class="btn-primary btn-wide" %}
 | {% endif %}
 | {% endif %}
 
