Improve post display performance

--- a/dillo/templates/dillo/posts_grid_embed.pug
+++ b/dillo/templates/dillo/posts_grid_embed.pug
@@ -2,7 +2,6 @@
 | {% load dillo_filters %}
 
 | {% for post in posts %}
-| {% if post.media.all %}
 li.post-container(
 	data-post_id="{{ post.hash_id }}",
 )
@@ -25,9 +24,9 @@ li.post-container(
 				href="{% url 'post_detail' post.hash_id %}")
 
 				//- Views.
-				| {% if post.media.first.video and post.media.first.video.views_count %}
+				| {% if post.media.all.0.video and post.media.all.0.views_count %}
 				span
-					| #[i.i-eye] {{ post.media.first.video.views_count|compact_number }}
+					| #[i.i-eye] {{ post.media.all.0.views_count|compact_number }}
 				| {% endif %}
 
 				//- Comments.
@@ -40,7 +39,6 @@ li.post-container(
 				span  #[i.i-heart] {{ post.likes.count }}
 				| {% endif %}
 
-| {% endif %}
 
 | {% empty %}
 | {% include 'dillo/components/_post_list_empty.pug' %}
