Cleanup: CSS classes

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -80,7 +80,7 @@
 
   &.isOwn
     > .comment-body
-      border-bottom-left-radius: var(--border-radius-sm)
+      border-bottom-left-radius: var(--border-radius)
       box-shadow: inset var(--border-width) 0 0 var(--color-warning)
 
       .comment-author
@@ -113,7 +113,7 @@
   +padding(2)
   background-color: var(--background-tertiary)
   border-radius: var(--border-radius-lg)
-  border-top-left-radius: var(--border-radius-sm)
+  border-top-left-radius: var(--border-radius)
   display: flex
   flex: 1
   flex-direction: column
@@ -261,7 +261,7 @@
 
   textarea
     background-color: var(--background-page)
-    border-top-left-radius: var(--border-radius-sm)
+    border-top-left-radius: var(--border-radius)
     font-size: var(--comment-content-font-size)
     min-height: 3.5rem
     min-width: 100%
