--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -23,7 +23,7 @@
     &:before
       background-color: var(--notifications-background)
       border: var(--border-width) var(--notifications-background) solid
-      border-radius: var(--border-radius-sm)
+      border-radius: var(--border-radius)
       content: ''
       display: block
       height: $spacer
