Stream: Full width grid view

--- a/dillo/templates/dillo/components/_post_media_grid.pug
+++ b/dillo/templates/dillo/components/_post_media_grid.pug
@@ -1,6 +1,7 @@
 | {% load thumbnail %}
 
-.js-post-media-container(
+.post-media-container(
+	class="js-post-media-container",
 	data-post_layout="grid",
 	data-post_hash_id="{{ post.hash_id }}",
 	id="post-media-{{ post.hash_id }}")
