--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -1,4 +1,4 @@
-| {% extends "dillo/base_columns.pug" %}
+| {% extends "dillo/base.pug" %}
 | {% load i18n %}
 | {% load dillo_filters %}
 
@@ -6,89 +6,64 @@
 
 | {% block sidebar_classes %}hide-xs{% endblock sidebar_classes %}
 
+| {% block content %}
+.container-fluid
+  | {% if '/explore/' in request.path_info %}
+
+  | {% if trending_tags %}
+  .post-stream-tags
+    ul
+      | {% for tag in trending_tags %}
+      li
+        a.btn-tag(href="{% url 'posts_list_tag' tag %}", title="{{ tag }}")
+          span &#35;{{ tag | truncatechars:35 }}
+      | {% endfor %}
+  | {% endif %}
+
+  | {% endif %}
+
+  //- If we are exploring a tag, show it,
+  //- otherwise show the list of trending tags.
+  | {% if tag_name %}
+  .post-stream-header
+    .post-stream-tag-container
+      h1
+        #[small #[i.i-hash]]{{ tag_name }}
+      | {% if tag_followers_count %}
+      .post-stream-tag-count {{ tag_followers_count }} follower{{ tag_followers_count|pluralize }}
+      | {% endif %}
+    // TODO: Posts count.
+    .post-stream-tag-action
+      | {% include 'dillo/components/_button_follow.pug' with target_object=tag %}
+  | {% else %}
+
+  | {% if processing_posts.posts %}
+  .posts-processing
+    | #[span #[i.spinner-grow]] Your posts are being processed, hold tight...
+  | {% endif %}
+
+  .nav-tabbar
+    .nav-tabbar-items
+      a.btn(
+        href="{% url 'explore' %}?layout=grid",
+        class="{% if '/explore/' in request.get_full_path %}active{% endif %}")
+        span {% trans 'Explore' %}
+      a.btn(
+        href="{% url 'explore-feed' %}?layout=list",
+        class="{% ifequal '/feed/?layout=list' request.get_full_path %}active{% endifequal %}")
+        span {% trans 'Activity' %}
 
 
-| {% block stream %}
-//- If we are exploring a tag, show it,
-//- otherwise show the list of trending tags.
-| {% if tag_name %}
-.post-stream-header
-  .post-stream-tag-container
-    h1
-      #[small #[i.i-hash]]{{ tag_name }}
-    | {% if tag_followers_count %}
-    .post-stream-tag-count {{ tag_followers_count }} follower{{ tag_followers_count|pluralize }}
-    | {% endif %}
-  // TODO: Posts count.
-  .post-stream-tag-action
-    | {% include 'dillo/components/_button_follow.pug' with target_object=tag %}
-| {% else %}
+  | {% endif %}
 
-| {% if processing_posts.posts %}
-.posts-processing
-  | #[span #[i.spinner-grow]] Your posts are being processed, hold tight...
-| {% endif %}
-
-.nav-tabbar
-  .nav-tabbar-items
-    a.btn(
-      href="{% url 'explore' %}?layout=grid",
-      class="{% if '/explore/' in request.get_full_path %}active{% endif %}")
-      span {% trans 'Explore' %}
-    a.btn(
-      href="{% url 'explore-feed' %}?layout=list",
-      class="{% ifequal '/feed/?layout=list' request.get_full_path %}active{% endifequal %}")
-      span {% trans 'Activity' %}
-
-
-| {% if '/explore/' in request.path_info %}
-.feed-trending
-  | {% include 'dillo/components/_feed_trending.pug' %}
-| {% endif %}
-| {% endif %}
-
-ul#posts-list.post-list(
-  class="post-stream-{% if layout == 'grid' %}grid{% else %}list{% endif %}",
-  data-embed_url="{{ query_url }}")
-  li.post-list-empty
-    .spinner-border
-| {% endblock stream %}
+  ul#posts-list.post-list(
+    class="post-stream-{% if layout == 'grid' %}grid{% else %}list{% endif %}",
+    data-embed_url="{{ query_url }}")
+    li.post-list-empty
+      .spinner-border
+| {% endblock content %}
 
 | {% block sidebar %}
-
-| {% block navbar_upload_btn %}
-| {% if request.user.is_authenticated %}
-.sidebar-block.profile-sidebar
-  | {% include 'dillo/components/_profile_header_sidebar.pug' %}
-| {% endif %}
-
-.sidebar-block
-  .btn-toolbar-row
-    .btn-group
-      a.btn(
-        title="{% trans 'List View' %}",
-        href="?layout=list",
-        data-toggle="tooltip",
-        class="{% if layout == 'list' %}is-active{% endif %}")
-        span
-          i.i-list
-      a.btn(
-        title="{% trans 'Grid View' %}",
-        href="?layout=grid",
-        data-toggle="tooltip",
-        class="{% if layout == 'grid' %}is-active{% endif %}")
-        span
-          i.i-grid
-
-    | {% url 'post_create' as btn_create_url %}
-    | {% trans 'Create a Post' as btn_label %}
-    | {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" icon="i-edit" %}
-| {% endblock navbar_upload_btn%}
-
-| {% if trending_tags %}
-.sidebar-block.feed-trending
-  | {% include 'dillo/components/_feed_trending.pug' %}
-| {% endif %}
 
 | {% if upcoming_events %}
 .sidebar-block
