--- a/dillo/templates/dillo/reels/reel_list.pug
+++ b/dillo/templates/dillo/reels/reel_list.pug
@@ -1,75 +1,70 @@
-| {% extends "dillo/base_columns.pug" %}
+| {% extends "dillo/base.pug" %}
 | {% load i18n %}
 | {% load thumbnail %}
 
+| {% block content %}
+.container-fluid
+  .nav-tabbar
+    | {% block stream_nav_items %}
+    | {% include 'dillo/reels/_navigation_reel.pug' %}
+    | {% endblock stream_nav_items %}
+    | {% include 'dillo/components/_pagination.pug' with page_obj=page_obj label="Reel" %}
 
-| {% block stream_nav %}
-.nav-tabbar
-  | {% block stream_nav_items %}
-  | {% include 'dillo/reels/_navigation_reel.pug' %}
-  | {% endblock stream_nav_items %}
-  | {% include 'dillo/components/_pagination.pug' with page_obj=page_obj label="Reel" %}
-| {% endblock stream_nav %}
-
-
-| {% block stream %}
-//- Notice for users without a reel.
-| {% if not user.profile.reel or not request.user.is_authenticated %}
-.card.theater-header
-  .card-body
-    .row
-      .col-md-9
-        | #[strong #[i.i-star] Your reel could be here!]
-        | {% if not request.user.is_authenticated %}
-        | {% url 'account_signup' as signup_url %}
-        | {% url 'account_signup' as btn_reels_cta %}
-        | #[a(href="{{ signup_url }}") Create a free account] to add your animation reel.
-        | {% trans 'Create Your Profile' as btn_profile_label %}
-        | {% else %}
-        | {% url 'profile_edit' as profile_edit_url %}
-        | {% url 'profile_edit' as btn_reels_cta %}
-        | Fill in the #[a(href="{{ profile_edit_url }}") reel section] on your profile.
-        | {% trans 'Add Reel to Profile' as btn_profile_label %}
-        | {% endif %}
-
-      .col-md-3
-        | {% include 'dillo/components/_button_generic.pug' with url=btn_reels_cta label=btn_profile_label class="btn-primary btn-wide" %}
-| {% endif %}
-
-| {% if object_list %}
-.row.cards-row
-  | {% for profile in object_list %}
-  .col
-    .card-borderless
-      | {% thumbnail profile.reel_thumbnail_16_9 "640x360" crop="center" as im %}
-      a.card-thumbnail(href="{% url 'reel-detail' profile.user_id %}{% if sort %}?{{ sort }}{% endif %}", title="{{ profile.name }}")
-        img.img-fluid(
-          src="{{ im.url }}",
-          width="{{ im.width }}",
-          height="{{ im.height }}",
-          alt="{{ profile.name }}")
-      | {% endthumbnail %}
-      .card-header
-        .card-header-image
-          | {% include 'dillo/components/_profile_avatar.pug' with user=profile.user size='small' %}
-        a.card-header-text(href="{% url 'reel-detail' profile.user_id %}{% if sort %}?{{ sort }}{% endif %}")
-          .card-title {{ profile.name }}
-          | {% if profile.location %}
-          .card-subtitle {{ profile.location }}
+  //- Notice for users without a reel.
+  | {% if not user.profile.reel or not request.user.is_authenticated %}
+  .card.theater-header
+    .card-body
+      .row
+        .col-md-9
+          | #[strong #[i.i-star] Your reel could be here!]
+          | {% if not request.user.is_authenticated %}
+          | {% url 'account_signup' as signup_url %}
+          | {% url 'account_signup' as btn_reels_cta %}
+          | #[a(href="{{ signup_url }}") Create a free account] to add your animation reel.
+          | {% trans 'Create Your Profile' as btn_profile_label %}
+          | {% else %}
+          | {% url 'profile_edit' as profile_edit_url %}
+          | {% url 'profile_edit' as btn_reels_cta %}
+          | Fill in the #[a(href="{{ profile_edit_url }}") reel section] on your profile.
+          | {% trans 'Add Reel to Profile' as btn_profile_label %}
           | {% endif %}
-  | {% endfor %}
 
-| {% else %}
-.post-list-empty
-  | {% url 'profile_edit' as url_short_create %}
-  | {% blocktrans with url_short_create=url_short_create %}
-  | No reels to show yet.
-  | {% endblocktrans %}
-| {% endif %}
+        .col-md-3
+          | {% include 'dillo/components/_button_generic.pug' with url=btn_reels_cta label=btn_profile_label class="btn-primary btn-wide" %}
+  | {% endif %}
 
-.theater-footer
-  | {% include 'dillo/components/_pagination.pug' with page=page_obj %}
+  | {% if object_list %}
+  .row.cards-row
+    | {% for profile in object_list %}
+    .col
+      .card-borderless
+        | {% thumbnail profile.reel_thumbnail_16_9 "640x360" crop="center" as im %}
+        a.card-thumbnail(href="{% url 'reel-detail' profile.user_id %}{% if sort %}?{{ sort }}{% endif %}", title="{{ profile.name }}")
+          img.img-fluid(
+            src="{{ im.url }}",
+            width="{{ im.width }}",
+            height="{{ im.height }}",
+            alt="{{ profile.name }}")
+        | {% endthumbnail %}
+        .card-header
+          .card-header-image
+            | {% include 'dillo/components/_profile_avatar.pug' with user=profile.user size='small' %}
+          a.card-header-text(href="{% url 'reel-detail' profile.user_id %}{% if sort %}?{{ sort }}{% endif %}")
+            .card-title {{ profile.name }}
+            | {% if profile.location %}
+            .card-subtitle {{ profile.location }}
+            | {% endif %}
+    | {% endfor %}
 
-| {% endblock stream %}
+  | {% else %}
+  .post-list-empty
+    | {% url 'profile_edit' as url_short_create %}
+    | {% blocktrans with url_short_create=url_short_create %}
+    | No reels to show yet.
+    | {% endblocktrans %}
+  | {% endif %}
 
-| {% block stream_width %}12{% endblock %}
+  .theater-footer
+    | {% include 'dillo/components/_pagination.pug' with page=page_obj %}
+
+| {% endblock content %}
