--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -27,10 +27,10 @@
         | {% for tag in trending_tags %}
         li
           a.btn-tag(
-            class="{% if tag_name and tag_name == tag|stringformat:'s' %}active{% endif %}",
+            class="{% if tag_name and tag_name == tag.name %}active{% endif %}",
             href="{% url 'posts_list_tag' tag %}",
-            title="{{ tag }}")
-            span &#35;{{ tag | truncatechars:35 }}
+            title="{{ tag.name }}")
+            span &#35;{{ tag.name | truncatechars:35 }}
         | {% endfor %}
     | {% endif %}
     | {% endif %}
